[project]
name = "pbflightlog"
version = "0.0.0"
description = "Tools for maintaining a personal GeoPackage flight log"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "geopandas>=1.1.2",
    "pandas>-2.3.0",
    "pyproj>=3.7.0",
    "requests>=2.32.0",
    "shapely>=2.1.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"